--- a/Analysis/Improved_FD_points.ipynb
+++ b/Analysis/Improved_FD_points.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "week = 1\n",
     "\n",
     "# Current gameweek \n",
-    "gameweek = 8"
+    "gameweek = 13"
    ]
   },
   {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,24 +137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\thoma\\AppData\\Local\\Temp\\ipykernel_12484\\4188682127.py:13: FutureWarning: The behavior of Series.replace (and DataFrame.replace) with CategoricalDtype is deprecated. In a future version, replace will only be used for cases that preserve the categories. To change the categories, use ser.cat.rename_categories instead.\n",
-      "  data['Difficulty'] = data['Difficulty'].replace(1, 2)\n",
-      "C:\\Users\\thoma\\AppData\\Local\\Temp\\ipykernel_12484\\4188682127.py:13: FutureWarning: The behavior of Series.replace (and DataFrame.replace) with CategoricalDtype is deprecated. In a future version, replace will only be used for cases that preserve the categories. To change the categories, use ser.cat.rename_categories instead.\n",
-      "  data['Difficulty'] = data['Difficulty'].replace(1, 2)\n",
-      "C:\\Users\\thoma\\AppData\\Local\\Temp\\ipykernel_12484\\4188682127.py:13: FutureWarning: The behavior of Series.replace (and DataFrame.replace) with CategoricalDtype is deprecated. In a future version, replace will only be used for cases that preserve the categories. To change the categories, use ser.cat.rename_categories instead.\n",
-      "  data['Difficulty'] = data['Difficulty'].replace(1, 2)\n",
-      "C:\\Users\\thoma\\AppData\\Local\\Temp\\ipykernel_12484\\4188682127.py:13: FutureWarning: The behavior of Series.replace (and DataFrame.replace) with CategoricalDtype is deprecated. In a future version, replace will only be used for cases that preserve the categories. To change the categories, use ser.cat.rename_categories instead.\n",
-      "  data['Difficulty'] = data['Difficulty'].replace(1, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Filter and sort players by position and points\n",
     "def filter_and_sort(data, positions, points_column='GW Points'):\n",
@@ -210,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -245,40 +230,40 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ARS (A)</td>\n",
-       "      <td>-0.708890</td>\n",
-       "      <td>1.44</td>\n",
+       "      <td>-0.655663</td>\n",
+       "      <td>1.52</td>\n",
+       "      <td>GK</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>CHE (H)</td>\n",
+       "      <td>-0.263689</td>\n",
+       "      <td>3.15</td>\n",
+       "      <td>MID</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>SUN (A)</td>\n",
+       "      <td>-0.542171</td>\n",
+       "      <td>1.89</td>\n",
        "      <td>GK</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>CHE (A)</td>\n",
-       "      <td>-0.476338</td>\n",
-       "      <td>2.43</td>\n",
-       "      <td>FWD</td>\n",
+       "      <td>-0.385084</td>\n",
+       "      <td>2.77</td>\n",
+       "      <td>MID</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>BUR (A)</td>\n",
-       "      <td>-0.375489</td>\n",
-       "      <td>2.74</td>\n",
-       "      <td>FWD</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>SUN (A)</td>\n",
-       "      <td>-0.509693</td>\n",
-       "      <td>2.10</td>\n",
-       "      <td>GK</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>BOU (A)</td>\n",
-       "      <td>-0.307013</td>\n",
-       "      <td>2.95</td>\n",
+       "      <th>1</th>\n",
+       "      <td>ARS (H)</td>\n",
+       "      <td>-0.381162</td>\n",
+       "      <td>2.78</td>\n",
        "      <td>FWD</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
@@ -291,43 +276,43 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>BOU (A)</td>\n",
-       "      <td>0.041101</td>\n",
-       "      <td>3.89</td>\n",
+       "      <th>31</th>\n",
+       "      <td>NFO (H)</td>\n",
+       "      <td>0.386825</td>\n",
+       "      <td>4.93</td>\n",
        "      <td>DEF</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>MUN (H)</td>\n",
-       "      <td>0.304567</td>\n",
-       "      <td>4.83</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>EVE (H)</td>\n",
-       "      <td>0.277375</td>\n",
-       "      <td>4.67</td>\n",
+       "      <th>30</th>\n",
+       "      <td>NFO (A)</td>\n",
+       "      <td>0.467264</td>\n",
+       "      <td>5.19</td>\n",
        "      <td>DEF</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>SUN (H)</td>\n",
-       "      <td>0.293742</td>\n",
-       "      <td>4.80</td>\n",
-       "      <td>MID</td>\n",
+       "      <th>29</th>\n",
+       "      <td>NEW (H)</td>\n",
+       "      <td>0.185794</td>\n",
+       "      <td>4.27</td>\n",
+       "      <td>DEF</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>LEE (H)</td>\n",
+       "      <td>0.695298</td>\n",
+       "      <td>5.94</td>\n",
+       "      <td>DEF</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
        "      <td>WOL (H)</td>\n",
-       "      <td>0.899742</td>\n",
-       "      <td>6.70</td>\n",
-       "      <td>DEF</td>\n",
+       "      <td>0.216538</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>FWD</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -337,22 +322,22 @@
       ],
       "text/plain": [
        "   Opponent   z_score  Av_GW_Points Position Difficulty\n",
-       "0   ARS (A) -0.708890          1.44       GK          5\n",
-       "12  CHE (A) -0.476338          2.43      FWD          5\n",
-       "10  BUR (A) -0.375489          2.74      FWD          5\n",
-       "32  SUN (A) -0.509693          2.10       GK          5\n",
-       "6   BOU (A) -0.307013          2.95      FWD          5\n",
+       "0   ARS (A) -0.655663          1.52       GK          5\n",
+       "13  CHE (H) -0.263689          3.15      MID          5\n",
+       "32  SUN (A) -0.542171          1.89       GK          5\n",
+       "12  CHE (A) -0.385084          2.77      MID          5\n",
+       "1   ARS (H) -0.381162          2.78      FWD          5\n",
        "..      ...       ...           ...      ...        ...\n",
-       "6   BOU (A)  0.041101          3.89      DEF          2\n",
-       "27  MUN (H)  0.304567          4.83      MID          2\n",
-       "17  EVE (H)  0.277375          4.67      DEF          2\n",
-       "33  SUN (H)  0.293742          4.80      MID          2\n",
-       "39  WOL (H)  0.899742          6.70      DEF          2\n",
+       "31  NFO (H)  0.386825          4.93      DEF          2\n",
+       "30  NFO (A)  0.467264          5.19      DEF          2\n",
+       "29  NEW (H)  0.185794          4.27      DEF          2\n",
+       "21  LEE (H)  0.695298          5.94      DEF          2\n",
+       "39  WOL (H)  0.216538          4.67      FWD          2\n",
        "\n",
        "[160 rows x 5 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "FPL",
+   "display_name": "complete_ml",
    "language": "python",
    "name": "python3"
   },
@@ -378,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
