--- a/Analysis/Improved_FD_points.ipynb
+++ b/Analysis/Improved_FD_points.ipynb
@@ -15,6 +15,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import os\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
     "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
@@ -27,54 +28,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Starting gameweek\n",
-    "week = 1\n",
+    "all_gameweeks = []\n",
     "\n",
-    "# Current gameweek \n",
-    "gameweek = 13"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Collect available player data"
+    "files = os.listdir(\n",
+    "    r'C:\\Users\\thoma\\Code\\Projects\\Fantasy-Premier-League\\Data\\2025_26\\Players'\n",
+    ")\n",
+    "\n",
+    "for i in range(len(files)):\n",
+    "    gameweek_data = pd.read_csv(\n",
+    "        rf'C:\\Users\\thoma\\Code\\Projects\\Fantasy-Premier-League\\Data\\2025_26\\Players\\GW_{i + 1}.csv'\n",
+    "    )\n",
+    "    all_gameweeks.append(gameweek_data)\n",
+    "\n",
+    "data = pd.concat(all_gameweeks, ignore_index=True)\n",
+    "\n",
+    "gameweek = len(files)\n",
+    "\n",
+    "# Remove players who play less than 61 minutes in a game (i.e. they do not recieve their 2 points minimum for playoing this amount)\n",
+    "player_data = data[data['Minutes'] > 60].copy()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize an empty list to store all individual, player gameweek data \n",
-    "all_player_sep = []\n",
-    "\n",
-    "# Loop through each gameweek\n",
-    "for i in range(week, gameweek + 1):  # Adjusting the range to start from 1 to gameweek\n",
-    "    # Read the CSV for the current gameweek\n",
-    "    x = pd.read_csv(rf'C:\\Users\\thoma\\Code\\Projects\\Fantasy-Premier-League\\Data\\2025_26\\Players\\GW_{i}.csv')\n",
-    "    \n",
-    "    # Append the current gameweek data to the list\n",
-    "    all_player_sep.append(x)\n",
-    "\n",
-    "# Concatenate all dataframes in the list into a single dataframe\n",
-    "player_data = pd.concat(all_player_sep, axis=0, ignore_index=True)\n",
-    "\n",
-    "# Remove players who play less than 61 minutes in a game (i.e. they do not recieve their 2 points minimum for playoing this amount)\n",
-    "player_data = player_data[player_data['Minutes'] > 60].copy()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Frequency Table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,10 +98,7 @@
     "counted_data = counted_data.astype(int)\n",
     "\n",
     "# Combine data and reorder columns to place team names in alphabetical order\n",
-    "final_data = overall_frequency.merge(counted_data, on='GW Points')\n",
-    "\n",
-    "# Show middle section of frequency table\n",
-    "#final_data.iloc[10:15]"
+    "final_data = overall_frequency.merge(counted_data, on='GW Points')"
    ]
   },
   {
@@ -137,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,155 +168,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Opponent</th>\n",
-       "      <th>z_score</th>\n",
-       "      <th>Av_GW_Points</th>\n",
-       "      <th>Position</th>\n",
-       "      <th>Difficulty</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ARS (A)</td>\n",
-       "      <td>-0.655663</td>\n",
-       "      <td>1.52</td>\n",
-       "      <td>GK</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>CHE (H)</td>\n",
-       "      <td>-0.263689</td>\n",
-       "      <td>3.15</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>SUN (A)</td>\n",
-       "      <td>-0.542171</td>\n",
-       "      <td>1.89</td>\n",
-       "      <td>GK</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>CHE (A)</td>\n",
-       "      <td>-0.385084</td>\n",
-       "      <td>2.77</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ARS (H)</td>\n",
-       "      <td>-0.381162</td>\n",
-       "      <td>2.78</td>\n",
-       "      <td>FWD</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>NFO (H)</td>\n",
-       "      <td>0.386825</td>\n",
-       "      <td>4.93</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>NFO (A)</td>\n",
-       "      <td>0.467264</td>\n",
-       "      <td>5.19</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>NEW (H)</td>\n",
-       "      <td>0.185794</td>\n",
-       "      <td>4.27</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>LEE (H)</td>\n",
-       "      <td>0.695298</td>\n",
-       "      <td>5.94</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>WOL (H)</td>\n",
-       "      <td>0.216538</td>\n",
-       "      <td>4.67</td>\n",
-       "      <td>FWD</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>160 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Opponent   z_score  Av_GW_Points Position Difficulty\n",
-       "0   ARS (A) -0.655663          1.52       GK          5\n",
-       "13  CHE (H) -0.263689          3.15      MID          5\n",
-       "32  SUN (A) -0.542171          1.89       GK          5\n",
-       "12  CHE (A) -0.385084          2.77      MID          5\n",
-       "1   ARS (H) -0.381162          2.78      FWD          5\n",
-       "..      ...       ...           ...      ...        ...\n",
-       "31  NFO (H)  0.386825          4.93      DEF          2\n",
-       "30  NFO (A)  0.467264          5.19      DEF          2\n",
-       "29  NEW (H)  0.185794          4.27      DEF          2\n",
-       "21  LEE (H)  0.695298          5.94      DEF          2\n",
-       "39  WOL (H)  0.216538          4.67      FWD          2\n",
-       "\n",
-       "[160 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "FD_points.sort_values(by= 'Difficulty')"
+    "# Add Team name information\n",
+    "FD_combined = FD_points.sort_values(by = 'Opponent')\n",
+    "\n",
+    "# All teams in order \n",
+    "teams = ['Arsenal', 'Aston Villa', 'Brighton', 'Bournemouth', 'Brentford', 'Burnley',\n",
+    "       'Chelsea', 'Crystal Palace', 'Everton', 'Fulham',\n",
+    "       'Leeds', 'Liverpool', 'Man City', 'Man Utd', 'Newcastle',\n",
+    "       'Nottingham Forest', 'Spurs', 'Sunderland', 'West Ham', 'Wolves']\n",
+    "\n",
+    "# Create team column\n",
+    "team_col = []\n",
+    "\n",
+    "# Loop through teams and add to fixture difficulty sheet \n",
+    "for team in teams:\n",
+    "    for i in range (1, 9):\n",
+    "        team_col.append(team)\n",
+    "\n",
+    "# Create new columns\n",
+    "FD_combined['Team'] = team_col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export to csv\n",
+    "FD_combined.to_csv(fr'C:\\Users\\thoma\\Code\\Projects\\Fantasy-Premier-League\\Data\\2025_26\\Fixtures\\Difficulty_ratings\\FD_Improved\\FD_{gameweek}.csv')"
    ]
   }
  ],
