--- a/Code/Model.ipynb
+++ b/Code/Model.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "from pulp import LpMaximize, LpProblem, LpVariable, lpSum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,15 +99,8 @@
     "difficulty = pd.read_csv(fr'C:\\Users\\thoma\\Code\\Projects\\Fantasy-Premier-League\\Data\\2025_26\\Fixtures\\Difficulty_ratings\\FD_Improved\\FD_{gameweek}.csv', index_col=0)\n",
     "\n",
     "# Create a mapping dictionary from fixture difficulty\n",
-    "mapping = difficulty.set_index(['Opponent', 'Position'])['Difficulty'].to_dict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 328,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "mapping = difficulty.set_index(['Opponent', 'Position'])['Difficulty'].to_dict()\n",
+    "\n",
     "# Apply the fixture difficulty by position and opponent\n",
     "for i in range(1, 4):\n",
     "    data[f'Diff{i + gameweek}'] = data.apply(\n",
@@ -120,30 +114,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loop to create FDI_1 to FDI_5, summing up the values from F_1 to F_i\n",
     "for i in range(1, 4):\n",
     "    # Create FDI_i by summing the appropriate columns\n",
-    "    data[f'Acc{i + gameweek}'] = data[[f'Diff{j + gameweek}' for j in range(1, i+1)]].sum(axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 330,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# FD index\n",
+    "    data[f'Acc{i + gameweek}'] = data[[f'Diff{j + gameweek}' for j in range(1, i+1)]].sum(axis=1)\n",
+    "\n",
+    "   # FD index\n",
     "for i in range(1, 4):\n",
-    "    data[f'FD{i + gameweek}'] = round(data['Form']/ data[f'Acc{i + gameweek}'], 3)"
+    "    data[f'FD{i + gameweek}'] = round(data['Form']/ data[f'Acc{i + gameweek}'], 3) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,13 +146,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from pulp import LpMaximize, LpProblem, LpVariable, lpSum\n",
-    "\n",
     "# Model_1\n",
     "\n",
     "# This model uses the FD_index to choose the best players. The FD_index is a \n",
@@ -176,7 +160,7 @@
     "\n",
     "# Define constants\n",
     "BUDGET = 800 # Choose your budget (1000 = £100m)\n",
-    "WEEKS = 1 # Choose how many weeks you want to prepare for between 1 and 5\n",
+    "weeks = 2 # Choose how many weeks you want to prepare for between 1 and 5\n",
     "GK = 1 # Goalkeepers required (Choose between 0 and 2)\n",
     "DEF = 3 # Defenders required (Choose between 0 and 5)\n",
     "MID = 4 # Midfielders required (Choose between 0 and 5)\n",
@@ -198,33 +182,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                    Name       Team Position  FD_Index  Price\n",
-      "0            Raya Martín    Arsenal       GK     0.611   59.0\n",
-      "1                   Tete     Fulham      DEF     0.833   45.0\n",
-      "2                 Wilson     Fulham      MID     1.083   52.0\n",
-      "3                  Foden   Man City      MID     1.630   84.0\n",
-      "4                Haaland   Man City      FWD     0.667  150.0\n",
-      "5         Dalot Teixeira    Man Utd      DEF     0.917   44.0\n",
-      "6       Borges Fernandes    Man Utd      MID     1.100   90.0\n",
-      "7                 Romero      Spurs      DEF     0.852   50.0\n",
-      "8                Ekitiké  Liverpool      FWD     0.714   84.0\n",
-      "9               Ouattara  Brentford      MID     1.000   60.0\n",
-      "10  Nascimento Rodrigues  Brentford      FWD     0.889   68.0\n",
-      "Total Team Cost: 786.0\n",
-      "Total Team Index 10.296\n"
+      "                    Name         Team Position  FD_Index  Price\n",
+      "1                  Foden     Man City      MID     2.095   84.0\n",
+      "5                 Kamara  Aston Villa      MID     1.917   49.0\n",
+      "3       Borges Fernandes      Man Utd      MID     1.571   90.0\n",
+      "4                 Romero        Spurs      DEF     1.533   50.0\n",
+      "9              De Cuyper     Brighton      DEF     1.533   43.0\n",
+      "10             van Hecke     Brighton      DEF     1.533   45.0\n",
+      "7               Ouattara    Brentford      MID     1.500   60.0\n",
+      "6                Watkins  Aston Villa      FWD     1.333   85.0\n",
+      "8   Nascimento Rodrigues    Brentford      FWD     1.333   68.0\n",
+      "0            Raya Martín      Arsenal       GK     0.917   59.0\n",
+      "2                Haaland     Man City      FWD     0.857  150.0\n",
+      "Total Team Cost: 783.0\n",
+      "Total Team Index 16.122\n"
      ]
     }
    ],
    "source": [
-    "weeks = 3\n",
-    "\n",
     "# Dynamically create the column name based on the number of weeks\n",
     "column_name = f'FD{gameweek + weeks}'\n",
     "\n",
@@ -283,8 +265,7 @@
     "# Convert selected players to a DataFrame for a better display\n",
     "selected_players_df = pd.DataFrame(selected_players)\n",
     "\n",
-    "# Display the DataFrame\n",
-    "print(selected_players_df)\n",
+    "print(selected_players_df.sort_values(by='FD_Index', ascending= False))\n",
     "\n",
     "# Display the total cost and index\n",
     "print(f'Total Team Cost:', sum(selected_players_df.Price))\n",
